          return zero for open(my $fh, '-|') || exec(...) style
          calls.

        * TEST: Added t/lethal.t, a test for basic subclassing.

        * TEST: Added t/usersub.t, a test for correct handling
          of user subroutines.

        * DOCUMENTATION: Noted in autodie.pm that user subs can
          only be made Fatal/autodying if they've been declared
          first.

1.11_01 Fri Jul  4 12:53:11 AEST 2008

        * RELEASE CODENAME: "Aristotle", in thanks for the many
          long and detailed discussions about the autodie interface
          and how it should interact with Fatal.  Aristotle was
          instrumental in ensuring autodie has the clean and
          simple interface that it does now.

        * FEATURE: 5.8 now has the ability to differentiate between calls
          that return false to indicate failure, and those that
          only return undef to indicate failure.  CORE::send and
          CORE::recv are examples of these.

        * FEATURE: You can now 'use autodie qw(fork)' to make sure your
          forks are successful (they must return defined).

        * TEST: t/todo.t removed.  We have passing tests (recv.t)
          for the reminder I had stuffed into here.

        * TEST: t/fork.t added, for testing autodying fork.

        * INTERNAL: The internal subroutine _remove_lexical_subs has been
          renamed to a much less misleading name of _install_subs,
          since that's what it actually does now.

        * BUGFIX: Found and fixed a nasty bug where autodie's internal
          subroutine cache was being too agressive.  This could result in
          handles from the incorrect package being used.  Scalar filehandles
          have never been affected by this bug.

        * BUGFIX: Autodying subroutines will no longer leak into other
          files if they are used/required/done in the same lexical scope.

        * BUILD: Fatal and autodie now install themselves with a