@@ -16,6 +16,9 @@ Revision history for Fatal
           only be made Fatal/autodying if they've been declared
           first.
 
+        * FEATURE: Conflicts between 'no autodie' and 'use Fatal'
+          re-enabled.
+
 1.11_01 Fri Jul  4 12:53:11 AEST 2008
 
         * RELEASE CODENAME: "Aristotle", in thanks for the many
